Added bot to other pages

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 
 	<!-- Converto Chatbot -->
-	<script>
+	<!-- <script>
 		(function (p, u, s, h) {
 			p.botId = "vnrjaj";
 			s = u.createElement('script');
@@ -15,6 +15,11 @@
 			h = u.getElementsByTagName('script')[0];
 			h.parentNode.insertBefore(s, h);
 		})(window, document);
+	</script> -->
+
+	<!-- GPT 3.5 Chatbot "ChatFast" -->
+	<script src="https://chatfast.io/chat.script.js" data-chat-service="ChatFast"
+		data-bot-id="b39a8c3e-8e04-4e5c-80ef-6b980fd57af4" data-chat-width="450px" data-chat-height="600px">
 	</script>
 
 	<!-- Google Tag Manager -->
@@ -267,7 +272,14 @@
 
 					<!-- desc -->
 					<div class="desc">
-						<p class="animated fadeIn delay-5s">Experienced Senior Full-Stack Web Developer with real world industry experience building high quality websites and web applications for large, medium, and small companies all over the world. I specialize in JavaScript and have worked for some of the biggest corporations in the world with the most recent being the American multinational automobile manufacturer known as Ford Motor Company. In addition, I have helped over 54,000 developers worldwide solve over 71,000 real world programming problems as a Code Mentor and Open Source Contributor. Take a look at some of my previous work and get in touch today!</p>
+						<p class="animated fadeIn delay-5s">Experienced Senior Full-Stack Web Developer with real world
+							industry experience building high quality websites and web applications for large, medium,
+							and small companies all over the world. I specialize in JavaScript and have worked for some
+							of the biggest corporations in the world with the most recent being the American
+							multinational automobile manufacturer known as Ford Motor Company. In addition, I have
+							helped over 54,000 developers worldwide solve over 71,000 real world programming problems as
+							a Code Mentor and Open Source Contributor. Take a look at some of my previous work and get
+							in touch today!</p>
 						<div class="info-list">
 							<ul>
 
@@ -279,8 +291,10 @@
 						</div>
 						<div class="bts">
 							<!-- <a  style="margin-right: 5 !important;" href="#" class="btn hover-animated"> -->
-								<span class="circle"></span>
-								<a href="https://www.codementor.io/@anthonys1760?refer=badge"><img src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg" alt="Codementor badge"></a>
+							<span class="circle"></span>
+							<a href="https://www.codementor.io/@anthonys1760?refer=badge"><img
+									src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg"
+									alt="Codementor badge"></a>
 							<!-- </a> -->
 						</div>
 					</div>
@@ -315,7 +329,9 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-ad"></span></div>
 								<div class="name">Code Mentorship</div>
-								<div class="text">Offering instant one-on-one help for software developers by utilizing screen sharing, video and text chat, in order to replicate for users the experience of having a mentor for code reviewing, debugging, and online programming.</div>
+								<div class="text">Offering instant one-on-one help for software developers by utilizing
+									screen sharing, video and text chat, in order to replicate for users the experience
+									of having a mentor for code reviewing, debugging, and online programming.</div>
 							</div>
 						</div>
 
@@ -324,9 +340,13 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-camera"></span></div>
 								<div class="name">Chatbot Development</div>
-								<div class="text">I will build an Intelligent Chatbot which will increase your business income by capturing all incoming leads. This chatbot will help you make your business run easier and faster
-									and also reduce stress by implementing a A.I. chatbot for your business that will answer customer messages for you 24/7.
-									This messenger bot will handle all leads for you and will notify you when a new lead comes in.</div>
+								<div class="text">I will build an Intelligent Chatbot which will increase your business
+									income by capturing all incoming leads. This chatbot will help you make your
+									business run easier and faster
+									and also reduce stress by implementing a A.I. chatbot for your business that will
+									answer customer messages for you 24/7.
+									This messenger bot will handle all leads for you and will notify you when a new lead
+									comes in.</div>
 							</div>
 						</div>
 
@@ -872,7 +892,9 @@
 	-->
 			<footer class="footer">
 				<div class="copy">
-					<p><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg" alt="Codementor badge"></a></p>
+					<p><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img
+								src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg"
+								alt="Codementor badge"></a></p>
 
 				</div>
 				<div class="soc-box">
