--- a/works_creative.html
+++ b/works_creative.html
@@ -22,7 +22,7 @@
 	<!-- End Google Tag Manager -->
 
 	<!-- Converto Chatbot -->
-	<script>
+	<!-- <script>
 		(function (p, u, s, h) {
 			p.botId = "vnrjaj";
 			s = u.createElement('script');
@@ -33,9 +33,14 @@
 			h = u.getElementsByTagName('script')[0];
 			h.parentNode.insertBefore(s, h);
 		})(window, document);
+	</script> -->
+
+	<!-- GPT 3.5 Chatbot "ChatFast" -->
+	<script src="https://chatfast.io/chat.script.js" data-chat-service="ChatFast"
+		data-bot-id="b39a8c3e-8e04-4e5c-80ef-6b980fd57af4" data-chat-width="450px" data-chat-height="600px">
 	</script>
 
-	
+
 	<!-- Mouseflow Heatmap -->
 	<script type="text/javascript">
 		window._mfq = window._mfq || [];
@@ -184,9 +189,9 @@
 									<a href="works_creative.html">Portfolio</a>
 
 
-									<li class="menu-item menu-item-has-children">
-										<a href="https://anthonysmith.hashnode.dev/" target="_blank">Blog</a>
-									</li>
+								<li class="menu-item menu-item-has-children">
+									<a href="https://anthonysmith.hashnode.dev/" target="_blank">Blog</a>
+								</li>
 
 								<li class="menu-item menu-item-has-children">
 									<a href="contacts_image.html">Contact</a>
@@ -312,66 +317,66 @@
 						</div>
 					</div> -->
 
-					<!-- TODO: Need to add buttons that say Demo | Github Repo to each project -->
+						<!-- TODO: Need to add buttons that say Demo | Github Repo to each project -->
 
-					<!-- DreamGPT-->
-					<div class="box-item f-gallery">
-						<div class="image">
-							<a href="https://anthonys1760.github.io/DreamGPT/" target="_blank"
-								class="has-popup-gallery hover-animated">
-								<img src="images/dreamgpt.jpeg" class="wp-post-image" alt="" />
-								<div class="d-sm-none">
-								</div>
-								<span class="info circle">
-									<span class="centrize full-width">
-										<span class="vertical-center">
-											<span class="icon fas fa-images"></span>
-											<span class="desc">
-												<span class="category">Responsive Website</span>
-												<span class="name">DreamGPT</span>
+						<!-- DreamGPT-->
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://anthonys1760.github.io/DreamGPT/" target="_blank"
+									class="has-popup-gallery hover-animated">
+									<img src="images/dreamgpt.jpeg" class="wp-post-image" alt="" />
+									<div class="d-sm-none">
+									</div>
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Responsive Website</span>
+													<span class="name">DreamGPT</span>
+												</span>
 											</span>
 										</span>
 									</span>
-								</span>
-							</a>
-							<div id="gallery-1" class="mfp-hide">
-								<a href="images/work1.jpg"></a>
-								<a href="images/work2.jpg"></a>
-								<a href="images/work3.jpg"></a>
-								<a href="images/work4.jpg"></a>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>
 							</div>
 						</div>
-					</div>
-					
 
-					<!-- Skynet Automation -->
-					<div class="box-item f-gallery">
-						<div class="image">
-							<a href="https://anthonys1760.github.io/skynetVPN/index.html" target="_blank"
-								class="has-popup-gallery hover-animated">
-								<img src="images/skynetvpn.jpg" class="wp-post-image" alt="" />
-								<div class="d-sm-none">
-								</div>
-								<span class="info circle">
-									<span class="centrize full-width">
-										<span class="vertical-center">
-											<span class="icon fas fa-images"></span>
-											<span class="desc">
-												<span class="category">Responsive Website</span>
-												<span class="name">Skynet VPN</span>
+
+						<!-- Skynet Automation -->
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://anthonys1760.github.io/skynetVPN/index.html" target="_blank"
+									class="has-popup-gallery hover-animated">
+									<img src="images/skynetvpn.jpg" class="wp-post-image" alt="" />
+									<div class="d-sm-none">
+									</div>
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Responsive Website</span>
+													<span class="name">Skynet VPN</span>
+												</span>
 											</span>
 										</span>
 									</span>
-								</span>
-							</a>
-							<div id="gallery-1" class="mfp-hide">
-								<a href="images/work1.jpg"></a>
-								<a href="images/work2.jpg"></a>
-								<a href="images/work3.jpg"></a>
-								<a href="images/work4.jpg"></a>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>
 							</div>
 						</div>
-					</div>
 
 
 						<!-- Skybot Automation -->
@@ -1773,7 +1778,9 @@
 				</div>
 				<hr>
 				<footer>
-					<p align="center" ;><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg" alt="Codementor badge"></a></p>
+					<p align="center" ;><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img
+								src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg"
+								alt="Codementor badge"></a></p>
 				</footer>
 
 				<!-- Scripts -->
