--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p class="animated fadeIn delay-3s"><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img
+				<p class="animated fadeIn delay-3s"><a href="https://www.wyzant.com/match/tutor/88404789"><img
 							src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg"
 							alt="Codementor badge"></a></p>
 			</div>
