--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
 		margin: auto;
 	}
 
-
-
-
-
 	.waveWrapperInner {
 		position: absolute;
 		width: 100%;
@@ -106,9 +102,9 @@
 	</script> -->
 
 <!-- GPT 3.5 Chatbot "ChatFast" -->
-<script src="https://chatfast.io/chat.script.js" data-chat-service="ChatFast"
+<!-- <script src="https://chatfast.io/chat.script.js" data-chat-service="ChatFast"
 	data-bot-id="b39a8c3e-8e04-4e5c-80ef-6b980fd57af4" data-chat-width="450px" data-chat-height="600px">
-</script>
+</script> -->
 
 <!-- <script src="//code.tidio.co/jybbrvc7f9az8ss3jvq9cusjxz8qjsix.js" async></script> -->
 
