--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 
 <!-- <script src="//code.tidio.co/jybbrvc7f9az8ss3jvq9cusjxz8qjsix.js" async></script> -->
 
+
+
 <!-- Google Tag Manager -->
 <script>
 	(function (w, d, s, l, i) {
@@ -232,6 +234,11 @@
 </head>
 
 <body class="home">
+
+	<div id="customgpt_chat"></div>
+<script src="https://cdn.customgpt.ai/js/embed.js" div_id="customgpt_chat" p_id="21139" p_key="ca9fa66d55df55d4b01c7432d414c471" width="100%" height="500px"></script>
+
+
 	<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 	<script>
 		// setTimeout(function () {
