--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 
 <body class="home">
 
-	<div id="customgpt_chat"></div>
-<script src="https://cdn.customgpt.ai/js/embed.js" div_id="customgpt_chat" p_id="21139" p_key="ca9fa66d55df55d4b01c7432d414c471" width="45%" height="200px"></script>
+	<script src="https://cdn.customgpt.ai/js/chat.js"></script>
+<script>window.onload = function () { CustomGPT.init({p_id: "21139", p_key: "ca9fa66d55df55d4b01c7432d414c471"}); };</script>
 
 
 	<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
