--- a/index.html
+++ b/index.html
@@ -236,8 +236,7 @@
 <body class="home">
 
 	<script src="https://cdn.customgpt.ai/js/chat.js"></script>
-<script>window.onload = function () { CustomGPT.init({p_id: "21139", p_key: "ca9fa66d55df55d4b01c7432d414c471"}); };</script>
-
+	<script>window.onload = function () { CustomGPT.init({p_id: "21139", p_key: "ca9fa66d55df55d4b01c7432d414c471", auto_popup: "1"}); };</script>
 
 	<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 	<script>
