--- a/index.html
+++ b/index.html
@@ -234,9 +234,23 @@
 </head>
 
 <body class="home">
+	
+	<script>
+		window.embeddedChatbotConfig = {
+		chatbotId: "QkhupSu82KD-028vXpL-P",
+		domain: "www.chatbase.co"
+		}
+		</script>
+		<script
+		src="https://www.chatbase.co/embed.min.js"
+		chatbotId="QkhupSu82KD-028vXpL-P"
+		domain="www.chatbase.co"
+		defer>
+		</script>
 
-	<script src="https://cdn.customgpt.ai/js/chat.js"></script>
-	<script>window.onload = function () { CustomGPT.init({p_id: "21139", p_key: "ca9fa66d55df55d4b01c7432d414c471", auto_popup: "1"}); };</script>
+	
+	<!-- <script src="https://cdn.customgpt.ai/js/chat.js"></script>
+	<script>window.onload = function () { CustomGPT.init({p_id: "21139", p_key: "ca9fa66d55df55d4b01c7432d414c471", auto_popup: "1"}); };</script> -->
 
 	<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 	<script>
