--- a/contacts_image.html
+++ b/contacts_image.html
@@ -21,6 +21,7 @@
 	<script src="https://cdn.customgpt.ai/js/chat.js"></script>
 	<script>window.onload = function () { CustomGPT.init({p_id: "21139", p_key: "ca9fa66d55df55d4b01c7432d414c471", auto_popup: "1"}); };
 	document.querySelector("body > div > div > div.bg-inherit > form > p > a").textContent = 'AdaptiveGPT';
+	console.log('Adaptive Code Fire!!!')
 	</script>
 	<!-- <script src="https://chatfast.io/chat.script.js" data-chat-service="ChatFast"
 		data-bot-id="b39a8c3e-8e04-4e5c-80ef-6b980fd57af4" data-chat-width="450px" data-chat-height="600px">
