--- a/contacts_image.html
+++ b/contacts_image.html
@@ -27,6 +27,11 @@
 		data-bot-id="b39a8c3e-8e04-4e5c-80ef-6b980fd57af4" data-chat-width="450px" data-chat-height="600px">
 	</script> -->
 
+	<script>
+		document.querySelector("body > div > div > div.bg-inherit > form > p > a").textContent = 'AdaptiveGPT';
+	console.log('Adaptive Code Fire!!!')
+	</script>
+
 	<!-- Google Tag Manager -->
 	<script>
 		(function (w, d, s, l, i) {
