--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
 		chatbotId="QkhupSu82KD-028vXpL-P"
 		domain="www.chatbase.co"
 		defer>
+		document.querySelector("body > div > div > div.bg-inherit > form > p > a").textContent = 'AdaptiveGPT';
+	console.log('Adaptive Code Fire!!!')
 		</script>
 
 	
