--- a/index.html
+++ b/index.html
@@ -248,8 +248,12 @@
 		defer>
 		document.querySelector("body > div > div > div.bg-inherit > form > p > a").textContent = 'AdaptiveGPT';
 	console.log('Adaptive Code Fire!!!')
+	document.querySelector("body > div > div > div.bg-inherit > form > p").remove();
 		</script>
 
+<script>
+	document.querySelector("body > div > div > div.bg-inherit > form > p").remove();
+</script>
 	
 	<!-- <script src="https://cdn.customgpt.ai/js/chat.js"></script>
 	<script>window.onload = function () { CustomGPT.init({p_id: "21139", p_key: "ca9fa66d55df55d4b01c7432d414c471", auto_popup: "1"}); };</script> -->
