--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en-US">
 
 <style>
+	.group.cb-dark .group-\[\.cb-dark\]\:text-\[\#b4b4b5\] {
+		display: none;
+	}
+
+
+
 	@keyframes move_wave {
 		0% {
 			transform: translateX(0) translateZ(0) scaleY(1)
